hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  # This annotation strips the prefix (/hello-world) from the request before routing to target container.
  # hello-world cannot handle path based requests and we do not want it to.
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello-world
        pathType: Prefix
        backend: 
          service:
            name: hello-world-service
            port:
              number: 8888
